src/css/styles.css
@import "normalize.css/normalize.css";
@import "syntax.css";

@custom-media --small screen and (min-width: 576px);
@custom-media --medium screen and (min-width: 768px);
@custom-media --large screen and (min-width: 992px);

:root {
  --black-8: rgba(0, 0, 0, 0.8);
  --black-6: rgba(0, 0, 0, 0.6);
  --black-2: rgba(0, 0, 0, 0.2);

  --near-white: #f4f4f4;
  --white-8: rgba(255, 255, 255, 0.8);
  --white-9: rgba(255, 255, 255, 0.9);

  --card-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
  --primary: #1976d2;
  --primary-dark: #004ba0;
  --primary-light: #63a4ff;
}

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

.nested-links a {
  color: initial;
  &:hover,
  &:focus {
    opacity: 0.5;
    transition: all 0.15s ease-in;
  }
}

.btn {
  display: inline-block;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25em;
  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
  text-align: center;
  color: initial;
  cursor: pointer;
  &:hover,
  &:focus {
    opacity: 0.5;
    transition: all 0.15s ease-in;
  }
}

.body-wrapper {
  background-color: var(--near-white);
  color: var(--black-8);
  line-height: 1.5;
  font-family: georgia, times, serif;
  font-size: 0.875rem;
  @media (--medium) {
    font-size: 1rem;
  }
  @media (--large) {
    font-size: 1.25rem;
  }
}

.site-header {
  background-color: var(--primary-dark);
  background-repeat: no-repeat;
  background-position: top center;
  background-size: cover;
}
.site-header__social-follow-wrapper {
  padding: 1rem;
  @media (--small) {
    padding: 1rem 2rem;
  }
}
.site-header__text {
  font-family: "avenir next", avenir, sans-serif;
  text-align: center;
  padding: 0 1rem 2rem;
  margin: 0 auto;
  @media (--small) {
    padding: 0 2rem 2rem;
    max-width: 576px;
  }
  @media (--medium) {
    max-width: 576px;
  }
  @media (--large) {
    max-width: 768px;
  }
}
.site-header__header-text {
  margin: 0;
  color: var(--white-9);
  font-weight: 400;
  line-height: 1.25;
  font-size: 2.25rem;
  @media (--medium) {
    font-size: 3rem;
  }
  @media (--large) {
    font-size: 5rem;
  }
}
.site-header__subheader-text {
  margin: 1rem auto 0;
  font-style: italic;
  font-weight: 200;
  color: var(--white-8);
}

.nav {
  background-color: var(--primary-dark);
  width: 100%;
  padding: 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  @media (--small) {
    padding: 1rem 2rem;
  }
}
.nav__title {
  font-size: 1.5rem;
  font-weight: 300;
  font-family: "avenir next", avenir, sans-serif;
  text-decoration: none;
  color: var(--white-8);
  display: inline-block;
  &:hover,
  &:focus {
    color: white;
  }
}

.social-icon {
  display: inline-block;
  z-index: 999;
  fill: var(--white-8);
  transition: all 0.15s ease-in;
  margin-right: 0.5rem;
}
.social-icon--twitter:hover,
.social-icon--twitter :focus {
  fill: #1da1f2;
}
.social-icon--github:hover,
.social-icon--github :focus {
  fill: #000;
}

.page {
  margin: 0 auto;
  padding: 0 0.5rem;
  @media (--small) {
    padding: 0 1rem;
    max-width: 576px;
  }
  @media (--medium) {
    max-width: 576px;
  }
  @media (--large) {
    max-width: 768px;
  }
}

.about {
  text-align: center;
}

.index-share-horizontal {
  margin: 0.5rem auto;
  @media (--small) {
    margin: 1rem auto;
  }
}
.index-anchor {
  display: block;
  background-color: #fff;
  margin: 0.5rem auto;
  box-shadow: var(--card-shadow);
  text-decoration: none;
  &:hover,
  &:focus {
    transition: all 0.2s;
    background-color: var(--primary-light);
  }
  @media (--small) {
    margin: 1rem auto;
  }
}

.summary {
  padding: 1rem;
  color: var(--black-8);
  overflow: hidden;
  @media (--small) {
    padding: 2rem;
  }
}
.summary__excerpt {
  color: var(--black-6);
}

body.fixed-nav-parent nav {
  position: fixed;
  top: 0;
  z-index: 1;
  box-shadow: 0 5px 0 rgba(0, 0, 0, 0.1);
}

.article {
  margin: 1rem auto 0;
  padding: 1rem;
  box-shadow: var(--card-shadow);
  background-color: #fff;
  @media (--medium) {
    margin-top: 2rem;
    padding: 1.5rem;
  }
  @media (--large) {
    margin-top: 4rem;
    padding: 2rem;
  }
}
.article__date {
  font-family: "avenir next", avenir, sans-serif;
  font-size: 0.625rem;
  @media (--medium) {
    font-size: 0.75rem;
  }
  @media (--large) {
    font-size: 0.875rem;
  }
}
.article__title {
  font-family: athelas, georgia, serif;
  font-size: 1rem;
  @media (--medium) {
    font-size: 1.25rem;
  }
  @media (--large) {
    font-size: 1.5rem;
  }
}
.article__title--large {
  font-size: 1.25rem;
  @media (--medium) {
    font-size: 1.5rem;
  }
  @media (--large) {
    font-size: 1.75rem;
  }
}
.article__content {
  margin-top: 0.5rem;
}
.article-extra {
  margin: 0.5rem auto 0;
  padding-top: 0.25rem;
  max-width: 768px;
}

.blog-extras-container {
  box-shadow: var(--card-shadow);
  background-color: #fff;
  padding: 1rem;
}
.blog-extras-container__title {
  font-weight: bolder;
}
.blog-extras-container--center {
  text-align: center;
}

.subscribe__input {
  border-style: solid;
  border-width: 1px;
  border-color: var(--black-2);
  padding: 0.5rem;
  margin-bottom: 0.5rem;
  width: 80%;
}

.btn--subscribe {
  background-color: var(--primary);
  border-color: var(--primary);
  color: white;
}

.link-to-repo {
  vertical-align: middle;
  text-align: center;
  margin: 2rem auto 0;
}

.btn--github {
  background-image: linear-gradient(to bottom, #fafbfc, #e4ebf0);
  border-color: #d1d2d3;
}

.site-license {
  margin: 2rem auto 1rem;
  text-align: center;
}
.site-license a {
  text-decoration: none;
}

pre {
  overflow-x: auto;
  overflow-y: hidden;
  position: relative;
  hyphens: none;
}
pre code {
  display: block;
  padding: 1em;
  font-size: 0.625rem;
  @media (--medium) {
    font-size: 0.75rem;
    padding: 1.25em;
  }
  @media (--large) {
    font-size: 0.875rem;
    padding: 1.5em;
  }
}

.not-found {
  text-align: center;
  margin-top: 2rem;
}
.not-found__gif {
  background-image: url("https://media.giphy.com/media/OfpdDt12u1Psk/giphy.gif");
  background-repeat: no-repeat;
  background-position: top;
  height: 20rem;
}

.share-buttons-vertical {
  z-index: -1;
  display: none;
  @media (--medium) {
    border-radius: 0.4rem;
    display: block;
    margin: 1rem;
    position: fixed;
    text-align: center;
    top: 50%;
    transform: translateY(-50%);
  }
}
.share-buttons-vertical__text {
  padding: 0.25rem;
  font-size: 0.6rem;
}

.share-horizontal {
  @media (--medium) {
    display: none;
  }
}

.share-buttons-horizontal {
  display: flex;
  justify-content: start;
}

.share-button-horizontal {
  margin: 0.5rem 0.5rem 0 0;
}

